syntax = "proto3";

package favorites;

import "google/protobuf/empty.proto";

option go_package = "yadro.com/course/proto/favorites";

message FavoriteItem {
  int32 comic_id = 1;
  int64 created_at_unix = 2;
}

message ListResponse {
  repeated FavoriteItem items = 1;
}

message AddRequest {
  uint32 user_id = 1;
  int32 comic_id = 2;
}

message DeleteRequest {
  uint32 user_id = 1;
  int32 comic_id = 2;
}

message ListRequest {
  uint32 user_id = 1;
}

service Favorites {
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc Add(AddRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc List(ListRequest) returns (ListResponse);
}
